[code] Overflow fix

--- a/fairplayer/css/style.css
+++ b/fairplayer/css/style.css
@@ -1646,6 +1646,7 @@ div[class*=grdnt] .screen .owl-dot.active {
 .hero-content {
     z-index: 3;
     position: relative;
+	overflow: hidden;
 }
 
 .hero .img-pre.right {
